html: update footer

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     </div>
     <footer>
         <p><a href="#" id="privacy-policy-footer-link">Privacy Policy</a></p>
-        <p>Created for fun by <a href="https://github.com/mschwrdtnr" target="_blank">mschwrdtnr</a> with the help of OpenAI.</p>
+        <p>Created for fun by <a href="https://github.com/mschwrdtnr" target="_blank">mschwrdtnr</a></p>
     </footer>
     <!-- Privacy Policy Modal -->
     <div id="privacy-policy-modal" class="modal">
